--- a/scss/common/_common.scss
+++ b/scss/common/_common.scss
@@ -22,7 +22,7 @@ button {
   position: relative;
   width: 100%;
   height: 100%;
-  background-image: url("../../img/main_bg.jpeg");
+  background-image: url("../img/main_bg.jpeg");
   z-index: -2;
 
   &::before {
