--- a/scss/style.css
+++ b/scss/style.css
@@ -194,7 +194,7 @@ button {
   position: relative;
   width: 100%;
   height: 100%;
-  background-image: url("../../img/main_bg.jpeg");
+  background-image: url("../img/main_bg.jpeg");
   z-index: -2;
 }
 .container::before {
